--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-push-iamge:
+  build-and-push-image:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
